--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Because the basics are important!</p>
         <p>
           Learn more about Git in the
-          <a href="https://git-scm.com/book/en/v2">official docs</a> or
+          <a href="https://git-scm.com">official docs</a> or
           <a href="https://acad.link/git">our course</a>.
         </p>
       </section>
